fixd text cutoff in portfolio on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,17 +654,17 @@ section {
   z-index: 9994;
 }
 .portfolio .portfolio-wrap .portfolio-info h3 {
-  font-size: 40px;
+  font-size: 30px;
   color: var(--title-color);
   font-weight: 800;
 }
 .portfolio .portfolio-wrap .portfolio-info p {
   color: var(--title-color);
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
   /* text-transform: uppercase; */
   padding: 0;
-  margin: 30px;
+  margin: 15px;
 }
 .portfolio .portfolio-wrap .portfolio-links {
   text-align: center;
@@ -673,7 +673,7 @@ section {
 .portfolio .portfolio-wrap .portfolio-links a {
   color: var(--title-color);
   margin: 0 10px;
-  font-size: 60px;
+  font-size: 30px;
   display: inline-block;
   transition: 0.3s;
 }
@@ -697,6 +697,19 @@ section {
 .portfolio .portfolio-wrap:hover .portfolio-info::after {
   bottom: 15px;
   right: 15px;
+}
+
+@media (min-width: 1200px) {
+  .portfolio .portfolio-wrap .portfolio-info h3 {
+    font-size: 40px;
+  }
+  .portfolio .portfolio-wrap .portfolio-info p {
+  font-size: 20px;
+  margin: 30px;
+  }
+  .portfolio .portfolio-wrap .portfolio-links a {
+  font-size: 60px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -727,7 +740,7 @@ section {
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
 }
 .portfolio-details .portfolio-info h3 {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 700;
   margin-bottom: 20px;
   padding-bottom: 20px;
